# punica

./: .clangd  .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  release-please-config.json  setup.py
.github/workflows/: build_wheel.yml  gpu-test.yml  release-please.yml  release_wheel.yml
benchmarks/: bench_backbone_vs_lora.py  bench_batch_decode.py  bench_layer_lora_decode.py  bench_lora.py  bench_lora_op_impls.py  bench_model_lora_decode.py  bench_model_prefill_decode.py  bench_ops.py  bench_sgmv.py  bench_sgmv_cutlass.py  bench_textgen.py  bench_textgen_all.py  bench_textgen_lora.py  bench_textgen_lora_all.py  benchmark_utils.py  runft.py
benchmarks/fastertransformer/: .clang-format  CMakeLists.txt  __init__.py  build_ext.py  ft_llama.cc  ft_llama.h  ft_pybind11.cc
benchmarks/nvbench/: CMakeLists.txt  sgmv.cu  sgmv_flashinfer.cu
ci/: ci-punica.env.example  ci-punica.service  run-ci-build-wheel.bash  run-ci-gpu-tests.bash  test-run-ci.bash
csrc/: punica_ops.cc
csrc/flashinfer_adapter/: flashinfer_all.cu  flashinfer_config.h
csrc/sgmv/: sgmv.h  sgmv_cutlass.cu  sgmv_cutlass.cuh
csrc/sgmv_flashinfer/: sgmv_all.cu  sgmv_config.h  sgmv_flashinfer.cuh
examples/: textgen.py  textgen_lora.py  tui-multi-lora.py
examples/finetune/: README.md  create-finetune-data.py  dataset_info.json  finetune.sh  run-llmtuner.py
examples/finetune/data/: dataset_info.json
punica/: __init__.py
punica/models/: llama.py  llama_lora.py  tensor_parallel.py
punica/ops/: __init__.py
punica/ops/csrc/: bgmv.cu  punica_ops.cc
punica/ops/csrc/bgmv/: bgmv_impl.cuh
punica/ops/csrc/flashinfer/: decode.cuh  page.cuh
punica/ops/csrc/flashinfer_adapter/: flashinfer_all.cu  flashinfer_config.h  flashinfer_impl.cuh
punica/ops/csrc/sgmv/: sgmv.cuh
punica/ops/csrc/sgmv_flashinfer/: sgmv_flashinfer.cuh
punica/utils/: __init__.py  cat_tensor.py  convert_lora_weight.py  kvcache.py  lora.py  tp_comm.py
src/punica/: __init__.py
src/punica/models/: __init__.py  llama.py  llama_lora.py
src/punica/ops/: __init__.py
src/punica/utils/: __init__.py  cat_tensor.py  convert_lora_weight.py  kvcache.py  lora.py
tests/: test_batch_decode.py  test_bgmv.py  test_flashinfer.py  test_kvcache.py  test_rms_norm.py  test_sgmv.py  test_sgmv_cutlass.py
