[build-system]
requires = ["setuptools", "torch", "numpy", "ninja", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "punica"
description = "Punica: System for serving Large Language Models."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pytorch", "llm", "lora", "transformer"]
dynamic = ["version"]
dependencies = [
    "torch",
    "transformers",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "yapf",
    "pytz",
    "tqdm",
    "scipy",
    "peft",
    "accelerate",
    "textual",
]

[tool.yapf]
based_on_style = "yapf"

[tool.pytest.ini_options]
addopts = "--ignore=third_party"
