[build-system]
requires = ["setuptools", "torch", "numpy", "ninja", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "punica"
description = "Punica: System for serving Large Language Models."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pytorch", "llm", "lora", "transformer"]
dynamic = ["version"]
dependencies = [
    "torch",
    "transformers",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pytz",
    "tqdm",
    "scipy",
    "peft",
    "accelerate",
    "textual",
]

[tool.ruff]
exclude = ["third_party"]

[tool.ruff.isort]
known-first-party = ["punica"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E501", # Line too long
    "E741", # Ambiguous variable name
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--ignore=third_party"
