[build-system]
requires = ["setuptools", "torch", "numpy", "ninja", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "punica"
description = "Punica: System for serving Large Language Models."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pytorch", "llm", "lora", "transformer"]
dynamic = ["version"]
dependencies = [
    "torch",
    "transformers",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pytz",
    "tqdm",
    "scipy",
    "peft",
    "accelerate",
    "textual",
]

# Include different sets of files for sdist and wheel
# see: https://stackoverflow.com/a/54953494/1332817
[tool.setuptools.package-data]  # wheel-only files
punica = ["src/punica/_build_meta.py"]
[tool.setuptools.exclude-package-data]  # exclude from wheel
punica = ["csrc", "third_party"]

[tool.ruff]
exclude = ["third_party", "src/punica/_build_meta.py"]

[tool.ruff.lint.isort]
known-first-party = ["punica"]
combine-as-imports = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E501", # Line too long
    "E741", # Ambiguous variable name
]

[tool.ruff.per-file-ignores]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["examples", "src", "tests"]
exclude = ["examples/finetune"]
